--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
   "name": "js-fullstack-seed",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "server/app.js",
   "dependencies": {
-    "express": "~4.0.0",
-    "morgan": "~1.0.0",
     "body-parser": "~1.0.0",
-    "method-override": "~1.0.0",
-    "static-favicon": "~1.0.1",
-    "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
-    "errorhandler": "~1.0.0",
+    "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
-    "lodash": "~2.4.1",
+    "cookie-parser": "~1.0.1",
     "ejs": "~0.8.4",
-    "mongoose": "~3.8.8",
-    "jsonwebtoken": "^0.3.0",
+    "errorhandler": "~1.0.0",
+    "express": "~4.0.0",
     "express-jwt": "^0.1.3",
+    "express-session": "~1.0.2",
+    "jsonwebtoken": "^0.3.0",
+    "lodash": "~2.4.1",
+    "method-override": "~1.0.0",
+    "mongoose": "~3.8.8",
+    "morgan": "~1.0.0",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
-    "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.4.1",
-    "socket.io": "~0.9.16",
-    "socketio-jwt": "^2.0.2"
+    "static-favicon": "~1.0.1",
+    "tingodb": "^0.2.1",
+    "tungus": "0.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
@@ -87,7 +86,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "start": "node server/app.js",
+    "start": "NOD_ENV='production' node server/app.js",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   }
